--- a/src/stylesheets/Homepage/Homepage.css
+++ b/src/stylesheets/Homepage/Homepage.css
@@ -51,6 +51,274 @@
 
 /*end top section */
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*start raw nav section */
+
+#header{
+  /* 
+    background: rgb(63, 21, 70); */
+    background: rgb(30, 5, 35);
+    padding: 15px;
+  }
+   .nav-menu ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  .nav-menu > ul > li {
+    display: flex;
+  
+  
+  }
+  .nav-menu > ul > li {
+    position: relative;
+    white-space: nowrap;
+    padding: 10px 0 10px 22px;
+  
+  }
+  .nav-menu a {
+    display: block;
+    position: relative;
+    color: rgba(255, 255, 255, 0.7);
+    transition: .3s;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont,
+     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 
+     'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+  }
+  .nav-menu > lu > li a::before{
+    content: "";
+    /* position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: -6px;
+    left: 0; */
+    background-color: rgb(172, 235, 103);
+    visibility: hidden;
+    width: 0px;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .nav-menu a:hover::before,
+  .nav-menu li:hover >a::before {
+    visibility: visible;
+    width: 100%;
+  
+  }
+  
+  
+  
+  
+  
+  
+  
+  
+  /*ends raw nav section */
+  
+  
+  /* #navbarNav {
+    background-color: #27292b;
+  }
+  
+  #navbarNav ul li {
+    display: inline-block;
+  }
+  
+  .nav-item a {
+    padding: 10px 35px;
+    color: aliceblue;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    position: relative;
+  }
+  
+  .nav-item a:hover {
+    color: rgb(235, 220, 220);
+  }
+  
+  .nav-link::after {
+    position:absolute;
+    content: '';
+    height: 1px;
+    width: 0;
+    bottom: 5px;
+    left: 50%;
+    background: #bff3bf;
+    transition: cubic-bezier(.77,0,.18,1) .5s;
+   
+  }
+  
+  .nav-link:hover::after {
+    width: 60%;
+    left: 20%; 
+  
+  }
+  
+  #navbarNav ul li ul {
+    display: none;
+    position: absolute;
+    background-color: #27292b;
+    width: 300px;
+    padding-top: 20px;
+    z-index: 1;
+  }
+  
+  #navbarNav ul li:hover> ul {
+    display: block;
+  }
+  
+  #navbarNav ul li ul li {
+    text-decoration: none;
+    width: 80%;
+    height: 50px;
+    text-align: center;
+  }
+  
+  
+  #navbarNav ul li ul li a{
+    text-decoration: none;
+  
+  } */
+  
+  /* navbar ends here */
+  
+  
+  /* Navbar Area Start */
+  .navbar {
+    background-color: #27292b;
+  }
+  
+   .nav-link {
+    padding: 10px 5px !important;
+    color: aliceblue !important;
+    text-transform: uppercase;
+    font-family: "Montserrat";
+    position: relative;
+    margin: 0 0.4vw;
+    font-size: 1vw;
+    transition: 0.5s;
+    -webkit-transition: 0.5s;
+    -moz-transition: 0.5s;
+    -ms-transition: 0.5s;
+    -o-transition: 0.5s;
+  }
+  .nav-link:hover {
+    color: rgb(235, 220, 220) !important;
+  }
+  
+  .nav-link::after {
+    position: absolute;
+    content: "";
+    height: 1px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background: #bff3bf;
+    transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
+    -webkit-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
+    -moz-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
+    -ms-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
+    -o-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
+    transform: scale(0);
+    -webkit-transform: scale(0);
+    -moz-transform: scale(0);
+    -ms-transform: scale(0);
+    -o-transform: scale(0);
+  }
+  
+  .nav-link:hover::after {
+    width: 100%;
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+  }
+  
+  .navbarNav ul li ul {
+    display: none;
+    position: absolute;
+    background-color: #27292b;
+    width: 300px;
+    padding-top: 20px;
+    z-index: 1;
+  }
+  
+  .navbarNav ul li:hover> ul {
+    display: block;
+  }
+  
+  .navbarNav ul li ul li {
+    text-decoration: none;
+    width: 80%;
+    height: 50px;
+    text-align: center;
+  }
+  
+  
+  .navbarNav ul li ul li a{
+    text-decoration: none;
+  }
+  
+  
+  /* Navbar Area End */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
 /* BANNER Section Start */
 
 .banner {
@@ -107,11 +375,11 @@
   border-radius: 0 30% 30% 0;
   z-index: 1;
   background-color: #ffffff;
+  text-align: center !important;
 }
 
 .about-desc {
   z-index: 1;
-  text-align: center;
 }
 
 .about-desc h3 {
@@ -127,7 +395,7 @@
 }
 
 .about-img {
-  margin-top: 30px;
+  margin-top: 23px;
   margin-left: -74px;
   z-index: -1;
   opacity: 0.7;
@@ -141,7 +409,7 @@
 }
 .message-btn {
   margin-top: 13px;
-  text-align: center;
+  text-align: center !important;
 }
 .message-btn a {
   font-size: 12px;
@@ -201,6 +469,7 @@
   }
 }
 
+
 @media (max-width: 576px) {
   #about {
     margin: 0;
@@ -243,6 +512,10 @@
 /* About responsive Section ends */
 
 /* Notice Section Start */
+.events {
+  margin: 0 10px;
+}
+
 .news {
   display: flex !important;
 }
@@ -260,10 +533,11 @@
 
 .news-title h3 {
   text-align: center;
-  font-size: 30px;
+  font-size: 25px !important;
   font-weight: 600;
   margin-bottom: 50px;
   color: #353535;
+  text-transform: uppercase;
 }
 
 .newsNevent-cards {
@@ -274,12 +548,13 @@
 }
 
 .news-card {
-  width: 40%;
+  /* width: 40%; */
   box-shadow: 0px 0px 19px 6px rgba(179, 179, 179, 0.75);
 }
 
 .news-body {
   padding: 40px;
+  justify-content: center;
 }
 
 .notice-card1 {
@@ -292,8 +567,9 @@
 }
 
 .notice-title h3 {
+  text-transform: uppercase;
   text-align: center;
-  font-size: 30px;
+  font-size: 25px !important;
   font-weight: 600;
   margin-bottom: 50px;
   color: #353535;
@@ -478,6 +754,10 @@ footer {
   padding: 20px 0;
 }
 
+.main-footer-links {
+  justify-content: center;
+}
+
 .contact-icon-inner {
   margin: 15px 0;
   display: flex;
@@ -498,6 +778,8 @@ footer {
 .footer-three h3 {
   color: #ffffff;
   padding: 20px 0 0 30px;
+  text-align: center;
+  margin-left: -38px;
 }
 
 .main-footer-links {
@@ -538,3 +820,24 @@ footer {
 }
 
 /* Min-Footer Section End */
+
+
+
+
+
+
+/* ====================================================== Academics -> Admission  */
+
+/* Research>Publication Section Start */
+.publications h3{
+  padding: 40px 60px;
+  font-family: serif;
+  font-weight: 700;
+  color: #555555;
+  border: 1px solid #c5c9ce;
+}
+
+.border a, .publications a {
+  text-decoration: none;
+}
+/* Research>Publication Section End */
