--- a/src/stylesheets/MainNavbar.css
+++ b/src/stylesheets/MainNavbar.css
@@ -24,7 +24,7 @@ a {
   position: relative;
   color: aliceblue !important;
   padding: 0 0.9vw;
-  font-size: 1vw;
+  font-size: 13px;
   transition: 0.5s;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
