--- a/src/stylesheets/About/About.css
+++ b/src/stylesheets/About/About.css
@@ -58,29 +58,30 @@
 }
 
 .message-text h3 {
-  font-size: 2.2vw;
+  /* font-size: 2.2vw; */
+  margin-top: 10px;
   color: #353535;
 }
 
 .message-text h6 {
-  font-size: 1.7vw;
+  /* font-size: 1.1vw; */
   font-weight: 400;
   color: #7a7a7a;
   margin: 10px 0;
+  font-size: 17px;
 }
 
 .message-text h4 {
-  font-size: 2vw;
+  /* font-size: 2vw; */
   color: #353535;
 }
 
 .message-text h5 {
   margin: 12px 0;
-  font-size: 2vw;
+  /* font-size: 2vw; */
 }
 
 .message-text p {
-  font-size: 1vw;
   line-height: 27px;
   letter-spacing: 1px;
   color: #7a7a7a;
