--- a/src/stylesheets/Homepage/Homepage.css
+++ b/src/stylesheets/Homepage/Homepage.css
@@ -227,38 +227,11 @@
     -ms-transition: 0.5s;
     -o-transition: 0.5s;
   }
-  .nav-link:hover {
-    color: rgb(235, 220, 220) !important;
-  }
   
   .nav-link::after {
-    position: absolute;
-    content: "";
-    height: 1px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    background: #bff3bf;
-    transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
-    -webkit-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
-    -moz-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
-    -ms-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
-    -o-transition: cubic-bezier(0.77, 0, 0.18, 1) 0.5s;
-    transform: scale(0);
-    -webkit-transform: scale(0);
-    -moz-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
+    display: none !important;
   }
-  
-  .nav-link:hover::after {
-    width: 100%;
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-  }
+
   
   .navbarNav ul li ul {
     display: none;
@@ -392,7 +365,7 @@
 }
 
 .about-desc p {
-  font-size: 1vw;
+  /* font-size: 1vw; */
   margin: 30px 0;
   line-height: 26px;
   letter-spacing: 0.7px;
@@ -420,11 +393,28 @@
   padding: 3px;
 }
 
+.message-text h6 {
+  font-size: 24px !important;
+}
+
+.message-text h6 {
+  font-size: 16px !important;
+  font-weight: 400;
+  color: #000000 !important;
+  font-weight: 500 !important;
+  margin: 10px 0;
+  margin-top: 8px !important;
+}
+
 /* About Section End */
 
 /* About responsive Section start */
 
 @media (max-width: 1176px) {
+  .both-part2 {
+    margin-top: 10px;
+  }
+  
   #about {
     margin: 0;
     padding: 0;
@@ -440,8 +430,6 @@
     font-weight: 550;
   }
   .about-desc p {
-    font-size: 1vw;
-
     margin: 10px 0;
     line-height: 10px;
     letter-spacing: 10;
@@ -475,6 +463,17 @@
 
 
 @media (max-width: 576px) {
+  .navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+    background: #191c1f !important;
+    color: #ffffff !important;
+    padding: 0;
+    margin-top: -5px;
+    margin-left: 45px;
+  }
+
+
+  
   #about {
     margin: 0;
   }
