--- a/src/stylesheets/MainNavbar.css
+++ b/src/stylesheets/MainNavbar.css
@@ -66,7 +66,7 @@ a {
   font-family: "Montserrat";
   position: relative;
   padding: 1vw .7vw ;
-  font-size: .9vw;
+  font-size: 12px;
   transition: 0.5s;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
@@ -139,7 +139,7 @@ a {
   content: '';
   height: 5px;
   width: 30%;
-  background-color: #7b0201;
+  background-color: #818080;
   top: 15px;
   left: 0;
 }
@@ -149,7 +149,7 @@ a {
   content: '';
   height: 5px;
   width: 30%;
-  background-color: #7b0201;
+  background-color: #818080;
   top: 15px;
   right: 0;
 }
