--- a/src/stylesheets/Homepage/Homepage.css
+++ b/src/stylesheets/Homepage/Homepage.css
@@ -51,93 +51,79 @@
 
 /*end top section */
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /*start raw nav section */
 
-#header{
+#header {
   /* 
     background: rgb(63, 21, 70); */
-    background: rgb(30, 5, 35);
-    padding: 15px;
-  }
-   .nav-menu ul{
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  .nav-menu > ul > li {
-    display: flex;
-  
-  
-  }
-  .nav-menu > ul > li {
-    position: relative;
-    white-space: nowrap;
-    padding: 10px 0 10px 22px;
-  
-  }
-  .nav-menu a {
-    display: block;
-    position: relative;
-    color: rgba(255, 255, 255, 0.7);
-    transition: .3s;
-    font-size: 14px;
-    font-weight: 500;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont,
-     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 
-     'Helvetica Neue', sans-serif;
-    text-transform: uppercase;
-  }
-  .nav-menu > lu > li a::before{
-    content: "";
-    /* position: absolute;
+  background: rgb(30, 5, 35);
+  padding: 15px;
+}
+.nav-menu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.nav-menu > ul > li {
+  display: flex;
+}
+.navbar-toggler:focus {
+  text-decoration: none;
+  outline: none;
+  box-shadow: none !important;
+}
+.navbar-toggler {
+  padding: var(--bs-navbar-toggler-padding-y) var(--bs-navbar-toggler-padding-x);
+  font-size: var(--bs-navbar-toggler-font-size);
+  line-height: 1;
+  color: var(--bs-navbar-color);
+  background-color: transparent;
+  border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
+  transition: var(--bs-navbar-toggler-transition);
+  border-radius: 0 !important;
+  -webkit-border-radius: 0 !important;
+  -moz-border-radius: 0 !important;
+  -ms-border-radius: 0 !important;
+  -o-border-radius: 0 !important;
+}
+.nav-menu > ul > li {
+  position: relative;
+  white-space: nowrap;
+  padding: 10px 0 10px 22px;
+}
+.nav-menu a {
+  display: block;
+  position: relative;
+  color: rgba(255, 255, 255, 0.7);
+  transition: 0.3s;
+  font-size: 14px;
+  font-weight: 500;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  text-transform: uppercase;
+}
+.nav-menu > lu > li a::before {
+  content: "";
+  /* position: absolute;
     width: 100%;
     height: 2px;
     bottom: -6px;
     left: 0; */
-    background-color: rgb(172, 235, 103);
-    visibility: hidden;
-    width: 0px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .nav-menu a:hover::before,
-  .nav-menu li:hover >a::before {
-    visibility: visible;
-    width: 100%;
-  
-  }
-  
-  
-  
-  
-  
-  
-  
-  
-  /*ends raw nav section */
-  
-  
-  /* #navbarNav {
+  background-color: rgb(172, 235, 103);
+  visibility: hidden;
+  width: 0px;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-menu a:hover::before,
+.nav-menu li:hover > a::before {
+  visibility: visible;
+  width: 100%;
+}
+
+/*ends raw nav section */
+
+/* #navbarNav {
     background-color: #27292b;
   }
   
@@ -200,101 +186,60 @@
     text-decoration: none;
   
   } */
-  
-  /* navbar ends here */
-  
-  
-  /* Navbar Area Start */
 
-  
+/* navbar ends here */
 
-  .navbar {
-    background-color: #27292b;
-  }
-  
-   .nav-link {
-    padding: 10px 5px !important;
-    color: aliceblue !important;
-    text-transform: uppercase;
-    font-family: "Montserrat";
-    position: relative;
-    margin: 0 0.4vw;
-    /* font-size: 1vw; */
-    font-size: 14px !important;
-    transition: 0.5s;
-    -webkit-transition: 0.5s;
-    -moz-transition: 0.5s;
-    -ms-transition: 0.5s;
-    -o-transition: 0.5s;
-  }
-  
-  .nav-link::after {
-    display: none !important;
-  }
+/* Navbar Area Start */
 
-  
-  .navbarNav ul li ul {
-    display: none;
-    position: absolute;
-    background-color: #27292b;
-    width: 300px;
-    padding-top: 20px;
-    z-index: 1;
-  }
-  
-  .navbarNav ul li:hover> ul {
-    display: block;
-  }
-  
-  .navbarNav ul li ul li {
-    text-decoration: none;
-    width: 80%;
-    height: 50px;
-    text-align: center;
-  }
-  
-  
-  .navbarNav ul li ul li a{
-    text-decoration: none;
-  }
-  
-  
-  /* Navbar Area End */
+.navbar {
+  background-color: #27292b;
+}
 
+.nav-link {
+  padding: 10px 5px !important;
+  color: aliceblue !important;
+  text-transform: uppercase;
+  font-family: "Montserrat";
+  position: relative;
+  margin: 0 0.4vw;
+  /* font-size: 1vw; */
+  font-size: 14px !important;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
 
+.nav-link::after {
+  display: none !important;
+}
 
+.navbarNav ul li ul {
+  display: none;
+  position: absolute;
+  background-color: #27292b;
+  width: 300px;
+  padding-top: 20px;
+  z-index: 1;
+}
 
+.navbarNav ul li:hover > ul {
+  display: block;
+}
 
+.navbarNav ul li ul li {
+  text-decoration: none;
+  width: 80%;
+  height: 50px;
+  text-align: center;
+}
 
+.navbarNav ul li ul li a {
+  text-decoration: none;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
+/* Navbar Area End */
 
 /* BANNER Section Start */
 
@@ -398,7 +343,7 @@
 }
 
 .message-text h6 {
-  font-size: 16px !important;
+  /* font-size: 16px !important; */
   font-weight: 400;
   color: #000000 !important;
   font-weight: 500 !important;
@@ -414,7 +359,7 @@
   .both-part2 {
     margin-top: 10px;
   }
-  
+
   #about {
     margin: 0;
     padding: 0;
@@ -461,7 +406,6 @@
   }
 }
 
-
 @media (max-width: 576px) {
   .navbar-expand-lg .navbar-nav .dropdown-menu {
     position: absolute;
@@ -472,8 +416,6 @@
     margin-left: 45px;
   }
 
-
-  
   #about {
     margin: 0;
   }
@@ -526,7 +468,6 @@
 .newsNnotice {
   display: flex;
   margin: 80px 0;
-  
 }
 
 .newsNnotice-main {
@@ -547,7 +488,6 @@
   justify-content: space-evenly;
   display: flex;
   gap: 30px;
-
 }
 
 .news-card {
@@ -725,6 +665,29 @@
 /* Contact Area End */
 
 /* Footer Section Start */
+.upArrow {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  text-align: center;
+  color: #fff;
+  background: #27292b;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+  -ms-transition: .3s;
+  -o-transition: .3s;
+  z-index: 99 !important;
+}
+
+.upArrow:hover {
+  background: #fff;
+  color: #27292b;
+}
+
 footer {
   background: #27292b;
   margin-top: 50px;
@@ -824,15 +787,10 @@ footer {
 
 /* Min-Footer Section End */
 
-
-
-
-
-
 /* ====================================================== Academics -> Admission  */
 
 /* Research>Publication Section Start */
-.publications h3{
+.publications h3 {
   padding: 40px 60px;
   font-family: serif;
   font-weight: 700;
@@ -840,7 +798,8 @@ footer {
   border: 1px solid #c5c9ce;
 }
 
-.border a, .publications a {
+.border a,
+.publications a {
   text-decoration: none;
 }
 /* Research>Publication Section End */
