--- a/src/stylesheets/MainNavbar.css
+++ b/src/stylesheets/MainNavbar.css
@@ -123,9 +123,10 @@ a {
 
 /* Research Section Start */
 .research-main {
-  display: flex;
+  /* display: flex; */
   gap: 0 30px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  /* justify-content: space-between; */
 }
 
 .research-title {
